# TechTheTurf-HighLevel

./: .gitignore  Hind  README.md  Vector.py  arig_depart_panneaux.py  commander.py  fichier_authentification  fichier_authentification_clair  graph.py  handlers.py  hl.sublime-project  main.py  main2.py  main3.py  main_tbu_edit.py  map.py  nuke.py  pami.py  pamini.py  poulet.py  ps4.py  publieur_commun.py  requirements.txt  robot.py  tablevis.py  test_vision_as_package.py
Emile/HL/: map.py  order.py
Evans/: Pami.py  serie.py
Hind/: Pami.py
Loic/: just_print_sinus.py  py_ssh.py
Loic/controller/: __init__.py  constants.py  controller_classes.py  test_read.py
Loic/test_i2c/: CMakeLists.txt  main2.c  test_i2c.uf2
Pablo/: commander.py  graph.py  pami.py  ps4.py  requirements.txt  robot.py  robots.py  square.py  telemetry.py
Pablo/pad/: gamepad.py
comm/: __init__.py  robot.py  telemetry.py
gui/: visualiser.py
lidar/: Lidar.py  Vector.py  idea.md  main.py
metacom/: README.md  fichier_authentification  fichier_authentification_clair  mosquitto.conf  mqtt.py  publieur_commun.py
pathfinding/: a_star.py  build_c_astar.sh  min_heap_binary_tree.py  test.py  test_heap.py  visual_test_astar.py  working_a_star.py
pathfinding/c_src/: CMakeLists.txt  astar.c  astar.h  min_heap.c  min_heap.h  test_astar.c  test_heap.c
tools/: flash.sh
utils/: controllers.py
vision/: __init__.py  aruco.py  camera.py  combinations.py  geometry.py  really_ideal_situations.py  test_ideal.py  test_positions.py  test_real.py
